# EC-Data-formats

./: README.md
metadata/: metadata.md  metadata_example.json
metadata/json_schemas/: catalogue.json  collectionInfo.json  collections.json  confClasses.json  contact.json  extent.json  featureCollectionGeoJSON.json  geometryGeoJSON.json  geometrycollectionGeoJSON.json  landingPage.json  language.json  license.json  linestringGeoJSON.json  link.json  recordGeoJSON.json  roles.json  theme.json
metadata/schema_validate/: pyproject.toml
metadata/schema_validate/schema_validate/: validate_metadata.ipynb
metadata/schema_validate/schema_validate/.ipynb_checkpoints/: validate_metadata-checkpoint.ipynb
metadata/yaml_schemas/: recordGeoJSON.yaml
