[tool.poetry]
name = "schema-validate"
version = "0.1.0"
description = ""
authors = ["Antonio Cerciello <antonio.cerciello@gmail.com>"]
readme = "../metadata.md"
packages = [{include = "schema_validate"}]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.4"
requests = "^2.31.0"
schema = "^0.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
